tests/asm/error/param_commas.s
.name "zork"
.comment "I'M ALIIIIVE"

xor		r1, r1, r1,
#r_asm does not accept last param with "," Syntax error at token [TOKEN][006:020] ENDLINE
#our_asm accept it 
